--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="https://github.com/Nightcore12/nightcore12.github.io/blob/f557f4d0d0449da345604e8e043d352887fd529c/images/octocat-1659011781774.png" id="octocat" alt="octocat-png" />
+<img src="https://raw.githubusercontent.com/Nightcore12/nightcore12.github.io/f557f4d0d0449da345604e8e043d352887fd529c/images/octocat-1659011781774.png" id="octocat" alt="octocat-png" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>What's your bussiness here?</p>
